FIX: optimized property for gaps in settings form

--- a/src/styles/components/settings/_referrals.scss
+++ b/src/styles/components/settings/_referrals.scss
@@ -51,7 +51,7 @@
       width: 220px;
 
       .form-title .inner & {
-        margin: -2px 0 0;
+        margin-top: -2px;
       }
     }
   }
